[gd_scene load_steps=6 format=2]

[ext_resource path="res://Scenes/white.png" type="Texture" id=1]
[ext_resource path="res://Scenes/PrayerTime.gd" type="Script" id=2]
[ext_resource path="res://Scenes/ArialMonoBold.tres" type="DynamicFont" id=3]
[ext_resource path="res://Scenes/ArialMonoBold2.tres" type="DynamicFont" id=4]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0, 0.235294, 0.0588235, 1 )

[node name="PrayerTime" type="CanvasLayer"]
script = ExtResource( 2 )

[node name="OutputPanel" type="Panel" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -325.0
margin_top = -277.0
margin_right = 321.0
margin_bottom = 294.0
custom_styles/panel = SubResource( 1 )

[node name="Panel" type="Panel" parent="OutputPanel"]
margin_left = 90.0
margin_top = 106.0
margin_right = 556.0
margin_bottom = 447.0

[node name="OutputText" type="RichTextLabel" parent="OutputPanel"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -224.0
margin_top = -171.5
margin_right = 225.0
margin_bottom = 153.5
custom_fonts/normal_font = ExtResource( 3 )
text = "Select available state using the
\"NEGERI PILIHAN\" button, then press
the \"REQUEST API\" button to submit.

This tool will connect to the online
server to receive the data.

Thank you for supporting me.
@ikmalsaid"

[node name="ApiRequester" type="HTTPRequest" parent="."]

[node name="RequestButton" type="Button" parent="."]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -173.0
margin_top = -58.0
margin_right = -20.0
margin_bottom = -28.0
custom_fonts/font = ExtResource( 3 )
text = "REQUEST API"

[node name="ActivityIndicator" type="Sprite" parent="."]
position = Vector2( 472, 31 )
texture = ExtResource( 1 )

[node name="ActivityMeter" type="Label" parent="."]
margin_left = 383.0
margin_top = 18.0
margin_right = 456.0
margin_bottom = 42.0
custom_fonts/font = ExtResource( 3 )
text = "ACT"
align = 2
valign = 1

[node name="ZoneSelection" type="OptionButton" parent="."]
margin_left = 15.0
margin_top = 442.0
margin_right = 313.0
margin_bottom = 472.0
custom_fonts/font = ExtResource( 3 )
text = "NEGERI PILIHAN"

[node name="AppTitle" type="RichTextLabel" parent="."]
margin_left = 17.0
margin_top = 14.0
margin_right = 280.0
margin_bottom = 54.0
custom_fonts/normal_font = ExtResource( 4 )
text = "Prayer Time Tool"

[node name="About" type="Label" parent="."]
margin_left = 18.0
margin_top = 38.0
margin_right = 298.0
margin_bottom = 62.0
custom_fonts/font = ExtResource( 3 )
text = "Made with love by Ikmal Said"
align = 1
valign = 1

[connection signal="request_completed" from="ApiRequester" to="." method="_on_request_completed"]
[connection signal="pressed" from="RequestButton" to="." method="_on_request_pressed"]
[connection signal="item_selected" from="ZoneSelection" to="." method="_on_zone_item_selected"]
